<resources>
    <string name="app_name">Citizens Complaints</string>
    <string name="complaints">Complaints</string>
    <string name="the_official_replied_the_right_of_the_sponsored">The official replied the right of the sponsored</string>
    <string name="to_receive_complaints_from_citizens">To receive complaints from citizens</string>
    <string name="follow_complaints">Follow Complaints</string>
    <string name="new_complaints">New Complaints</string>
    <string name="welcome_to_citizens_complaints">Welcome To Citizens Complaints</string>
    <string name="new_user">New User</string>
    <string name="address">Address :</string>
    <string name="citizens_name">Citizens Name :</string>
    <string name="national_id">National Id :</string>
    <string name="password">Password :</string>
    <string name="phone">Phone :</string>
    <string name="register_new_user">Register New User</string>
    <string name="register">Register</string>
    <string name="follow_your_complaints">To Follow Your Complaints</string>
    <string name="query">Query</string>
    <string name="citizens_id">National ID :</string>
    <string name="complaint_number">Complaint Number :</string>
    <string name="attachment">Attachment</string>
    <string name="small_description">Small Description</string>
    <string name="send">Send</string>
    <string name="name_of_institution">Name of Institution</string>
    <string name="subject">Subject</string>
    <string name="attach">Attach</string>
    <string name="enter_id">Please Enter Your  Id</string>
    <string name="enter_name">Please Enter Your Name</string>
    <string name="enter_phone">Please Enter Your Phone</string>
    <string name="enter_address">Please Enter Your Address</string>
    <string name="wait">^^...Please Wait...^^</string>
    <string name="op_notsucc">Not Successful</string>
    <string name="admin">Admin</string>
    <string name="e_mail">E-mail</string>
    <string name="show">Show</string>
    <string name="to_follow_citizens_complaints">To Follow Citizens Complaints</string>
    <string name="details">Details</string>
    <string-array name="Contacts">
        <item>Local units</item>
        <item>Housing</item>
        <item>Electricity</item>
        <item>Education</item>
        <item>Supply</item>
        <item>The health</item>
        <item>Social Affairs</item>
        <item>Water and sewage companies</item>
        <item>Azhar Region</item>
        <item>Other</item>
    </string-array>
    <string name="must_register">Sorry ..... Your not Registered</string>
    <string name="cit_name">Citizen Name</string>
    <string name="cit_address">Address</string>
    <string name="cit_id">Mail</string>
    <string name="text">text</string>
    <string name="text1">text1</string>
    <string name="text2">text2</string>
    <string name="complaints_data">Complaints Data</string>
    <string name="textview">TextView</string>
    <string name="about_developer">About Developer</string>
    <string name="your_information">Your Information</string>
    <string name="todo">TODO</string>
    <string name="complaints_details">Complaints Details</string>
    <string name="send_to_specialist">Send to Specialist</string>
    <string name="sent_data">Your Data send succesfully</string>
    <string name="phone_mess">the phone number so short</string>
    <string name="developer_shahinaz_moamen_radwan">Developer : Shahinaz Moamen Radwan</string>
    <string name="phone_no_01099884939">Phone No : 01099884939</string>
    <string name="email_shahinazmoamen_gmail_com">Email: shahinazmoamen@gmail.com</string>
</resources>
