<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="1.0"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="1.0">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/recycler_item"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="10dp"
            android:clickable="false"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="8dp"
            card_view:contentPadding="8dp">

            <TextView
                android:id="@+id/list_user1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:gravity="end"
                android:textColor="#000000"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/list_user2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:text="@string/text1"
                android:gravity="end"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/list_user3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/text2"
                android:gravity="end"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/list_user4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/text2"
                android:gravity="end"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_det"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/circle1"
                android:gravity="center"
                android:text="@string/details"
                android:textAllCaps="false"
                tools:ignore="RtlHardcoded" />


        </android.support.v7.widget.CardView>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>